crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__schema_stmt_recovery_33.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests ::\nparsing_module_string(r#\"\nschema A:\n    \"\"\"Schema Doc\"\"\"\n    \"attr\": str\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Schema(
                SchemaStmt {
                    doc: Some(
                        Node {
                            node: "\"\"\"Schema Doc\"\"\"",
                            filename: "",
                            line: 3,
                            column: 4,
                            end_line: 3,
                            end_column: 20,
                        },
                    ),
                    name: Node {
                        node: "A",
                        filename: "",
                        line: 2,
                        column: 7,
                        end_line: 2,
                        end_column: 8,
                    },
                    parent_name: None,
                    for_host_name: None,
                    is_mixin: false,
                    is_protocol: false,
                    args: None,
                    mixins: [],
                    body: [
                        Node {
                            node: SchemaAttr(
                                SchemaAttr {
                                    doc: "",
                                    name: Node {
                                        node: "attr",
                                        filename: "",
                                        line: 4,
                                        column: 4,
                                        end_line: 4,
                                        end_column: 10,
                                    },
                                    op: None,
                                    value: None,
                                    is_optional: false,
                                    decorators: [],
                                    ty: Node {
                                        node: Basic(
                                            Str,
                                        ),
                                        filename: "",
                                        line: 4,
                                        column: 12,
                                        end_line: 4,
                                        end_column: 15,
                                    },
                                },
                            ),
                            filename: "",
                            line: 4,
                            column: 4,
                            end_line: 4,
                            end_column: 15,
                        },
                    ],
                    decorators: [],
                    checks: [],
                    index_signature: None,
                },
            ),
            filename: "",
            line: 2,
            column: 0,
            end_line: 4,
            end_column: 15,
        },
    ],
    comments: [],
}
