crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__schema_stmt_recovery_34.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"\nschema A:\n    \"attr: str\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Schema(
                SchemaStmt {
                    doc: None,
                    name: Node {
                        node: "A",
                        filename: "",
                        line: 2,
                        column: 7,
                        end_line: 2,
                        end_column: 8,
                    },
                    parent_name: None,
                    for_host_name: None,
                    is_mixin: false,
                    is_protocol: false,
                    args: None,
                    mixins: [],
                    body: [
                        Node {
                            node: Expr(
                                ExprStmt {
                                    exprs: [
                                        Node {
                                            node: StringLit(
                                                StringLit {
                                                    is_long_string: false,
                                                    raw_value: "\"attr: str",
                                                    value: "attr: str",
                                                },
                                            ),
                                            filename: "",
                                            line: 3,
                                            column: 4,
                                            end_line: 3,
                                            end_column: 14,
                                        },
                                    ],
                                },
                            ),
                            filename: "",
                            line: 3,
                            column: 4,
                            end_line: 3,
                            end_column: 14,
                        },
                    ],
                    decorators: [],
                    checks: [],
                    index_signature: None,
                },
            ),
            filename: "",
            line: 2,
            column: 0,
            end_line: 3,
            end_column: 14,
        },
    ],
    comments: [],
}
