crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__schema_stmt_recovery_38.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"\nschema A:\n    mixin: []\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Schema(
                SchemaStmt {
                    doc: None,
                    name: Node {
                        node: "A",
                        filename: "",
                        line: 2,
                        column: 7,
                        end_line: 2,
                        end_column: 8,
                    },
                    parent_name: None,
                    for_host_name: None,
                    is_mixin: false,
                    is_protocol: false,
                    args: None,
                    mixins: [
                        Node {
                            node: Identifier {
                                names: [
                                    Node {
                                        node: "",
                                        filename: "",
                                        line: 3,
                                        column: 11,
                                        end_line: 3,
                                        end_column: 11,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Load,
                            },
                            filename: "",
                            line: 3,
                            column: 11,
                            end_line: 3,
                            end_column: 11,
                        },
                    ],
                    body: [],
                    decorators: [],
                    checks: [],
                    index_signature: None,
                },
            ),
            filename: "",
            line: 2,
            column: 0,
            end_line: 3,
            end_column: 13,
        },
    ],
    comments: [],
}
