crates/parser/src/tests/snapshots/kcl_parser__tests__error_recovery__schema_stmt_recovery_5.snap
---
source: crates/parser/src/tests/error_recovery.rs
expression: "$crate :: tests :: parsing_module_string(r#\"schema A(:\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Schema(
                SchemaStmt {
                    doc: None,
                    name: Node {
                        node: "A",
                        filename: "",
                        line: 1,
                        column: 7,
                        end_line: 1,
                        end_column: 8,
                    },
                    parent_name: Some(
                        Node {
                            node: Identifier {
                                names: [
                                    Node {
                                        node: "",
                                        filename: "",
                                        line: 1,
                                        column: 9,
                                        end_line: 1,
                                        end_column: 9,
                                    },
                                ],
                                pkgpath: "",
                                ctx: Load,
                            },
                            filename: "",
                            line: 1,
                            column: 9,
                            end_line: 1,
                            end_column: 9,
                        },
                    ),
                    for_host_name: None,
                    is_mixin: false,
                    is_protocol: false,
                    args: None,
                    mixins: [],
                    body: [],
                    decorators: [],
                    checks: [],
                    index_signature: None,
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 10,
        },
    ],
    comments: [],
}
